--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,13 +28,13 @@ jobs:
     - name: Update data
       run: |
         covid_update
-    - name: Commit files # Code snippet source: https://github.com/ad-m/github-push-action
-      run: |
-      git config --local user.email "action@github.com"
-      git config --local user.name "GitHub Action"
-      git commit -m "Add changes" -a
-    - name: Push changes
-    uses: ad-m/github-push-action@master
-    with:
-      # github_token: ${{ secrets.GITHUB_TOKEN }} # I'm not sure how to pass this in
-      branch: master
+    # - name: Commit files # Code snippet source: https://github.com/ad-m/github-push-action
+    #   run: |
+    #   git config --local user.email "action@github.com"
+    #   git config --local user.name "GitHub Action"
+    #   git commit -m "Add changes" -a
+    # - name: Push changes
+    # uses: ad-m/github-push-action@master
+    # with:
+    #   # github_token: ${{ secrets.GITHUB_TOKEN }} # I'm not sure how to pass this in
+    #   branch: master
