--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,7 +2,7 @@ name: Python package
 
 on:
   schedule:
-    - cron: "0 0 * * *" # runs at 00:00 UTC everyday
+    - cron: "*/3 * * * *" # runs every third minute
 
 jobs:
   build:
@@ -17,24 +17,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install -e .
-    - name: Test with pytest
-      run: |
-        pytest
     - name: Update data
       run: |
-        covid_update
-    # - name: Commit files # Code snippet source: https://github.com/ad-m/github-push-action
-    #   run: |
-    #   git config --local user.email "action@github.com"
-    #   git config --local user.name "GitHub Action"
-    #   git commit -m "Add changes" -a
-    # - name: Push changes
-    # uses: ad-m/github-push-action@master
-    # with:
-    #   # github_token: ${{ secrets.GITHUB_TOKEN }} # I'm not sure how to pass this in
-    #   branch: master
+        sh run.sh
+
