--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 
 on:
   schedule:
-    - cron: "*/1 * * * *" # runs every minute
+    - cron: "0 8 * * *" # runs every minute
 
 jobs:
   build:
